<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data
        android:id="@+id/dataArtistDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1F1F1F">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1F1F1F"
            app:cardBackgroundColor="#1F1F1F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#1F1F1F">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1F1F1F"
                android:color="#1F1F1F"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:layout_margin="30dp"
                    android:padding="15dp"
                    app:cardBackgroundColor="#1F1F1F"
                    app:cardCornerRadius="40dp"
                    app:cardElevation="4dp">

                    <ImageView
                        android:id="@+id/coverImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#1F1F1F"
                        android:contentDescription="Imagen del album"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/albumName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:textColor="@color/white"
                    app:autoSizeMinTextSize="20sp" />

                <TextView
                    android:id="@+id/albumDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/albumRecordLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/albumDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:justificationMode="inter_word"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/albumComentarioLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:justificationMode="inter_word"
                    android:text="@string/comentar_label"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/albumComentario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/comentar_hint"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/botonGuardarComentario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Guardar Comentario"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/botonComentar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Comentar" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>