...
        android:fontFamily="@font/gothic"
        app:cardCornerRadius="40dp"
        app:cardElevation="2dp">
     -->

    <ImageView
        android:id="@+id/albumMenu"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/title_albums"
...
