<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1F1F1F"
        android:orientation="vertical">

        <Button
            android:id="@+id/botonGuardarAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Guardar" />

        <TextView
            android:id="@+id/create_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/title_crear_albums"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/white"
            app:autoSizeMinTextSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_nombre"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/nombreAlbum"
            style="@android:style/Widget.Material.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            android:labelFor="@id/textView2"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#F0F0F0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_url"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/urlAlbum"
            style="@android:style/Widget.Material.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/hint_url"
            android:inputType="textPersonName"
            android:labelFor="@id/textView2"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="#F0F0F0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_fecha"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/fechaAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/hint_fecha"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_genero"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/generoAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:entries="@array/Genero"
            android:minHeight="48dp"
            android:popupBackground="#1F1F1F"
            android:theme="@style/spinnerTheme" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_discografica"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/empresaAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/titulo_discografica"
            android:entries="@array/Disquera"
            android:minHeight="48dp"
            android:popupBackground="#1F1F1F"
            android:theme="@style/spinnerTheme" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_descripcion"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/descripcionAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_descripcion"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>